@@ -1,0 +1,10 @@
+{
+    "screen": {
+        "width": 1920,
+        "height": 1080
+    },
+    "images": {
+        "width": 97,
+        "height": 43
+    }
+}
