@@ -1,1 +1,0 @@
-Screen: 1920 1080 Images: 97 43
