@@ -1,0 +1,6 @@
+{
+    "backgroundColor": "#eeeeee",
+    "otherButtonColor": "#e324ea",
+    "mainButtonColor": "#1cdb15",
+    "quitButtonColor": "#d81111"
+}
